--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ fbq('track', 'PageView');
   <div class="card">
 
     <div class="logo">
-      <img src="logo.png" alt="TradeHubFX Logo" loading="lazy">
+      <img src="tradehub.png.png" alt="TradeHubFX Logo" loading="lazy">
     </div>
 
     <h1>TradeHubFX</h1>
