--- a/index.html
+++ b/index.html
@@ -169,20 +169,23 @@ fbq('track', 'PageView');
   <div class="card">
 
     <div class="logo">
-      <img src="tradehub.png.png" alt="TradeHubFX Logo" loading="lazy">
+      <img src="tradehub.png" alt="TradeHubFX Logo" loading="lazy">
     </div>
 
     <h1>TradeHubFX</h1>
     <div class="subtitle">
-      Educational Gold Market Community for Serious Learners
+      Educational Gold Market Community for Serious Traders
     </div>
 
     <ul>
-      <li>✔ Educational discussion on XAUUSD market behavior</li>
-      <li>✔ Focus on price action concepts and structure</li>
-      <li>✔ Discipline, risk awareness, and trading psychology</li>
-      <li>✔ Community learning — no signals or tips</li>
+      <li>✔ Structured approach to observing the XAUUSD market</li>
+      <li>✔ Rule-based execution and decision-making logic</li>
+      <li>✔ Clear understanding of price action behavior</li>
+      <li>✔ Focus on discipline, process, and consistency</li>
+      <li>✔ Community learning with serious traders only</li>
+      
     </ul>
+
 
     <a class="cta"
        href="https://t.me/+nKx68fGzJQ81YmM9"
