--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ fbq('track', 'PageView');
 
 
     <a class="cta"
-       href="https://t.me/+nKx68fGzJQ81YmM9"
+       href="https://telegram.me/+nKx68fGzJQ81YmM9"
        target="_blank"
        aria-label="Join free TradeHubFX Telegram education group">
        Join Free Telegram Community
